# jaffle-shop-generator-2

./: .gitignore  Cargo.toml  README.md  install.sh
.claude/: launch.json
rust-jafgen/: .gitignore  Cargo.toml
rust-jafgen/src/: main.rs
rust-jafgen/src/models/: mod.rs  store.rs
rust-jafgen/src/simulation/: sim.rs
rust-jafgen/static/: index.html
src/: main.rs
src/models/: customer.rs  item.rs  names.rs  order.rs  supply.rs  tweet.rs
src/simulation/: curves.rs  market.rs  mod.rs  sim.rs  time.rs
src/web/: handlers.rs
static/: index.html
